--- a/refine/extensions/gokb/build.xml
+++ b/refine/extensions/gokb/build.xml
@@ -69,7 +69,7 @@
 	         </copy>
 	         
 	         <zip destfile="${dist.dir}/${fullname}.zip">
-	            <zipfileset dir="${ext.dir}/..">
+	            <zipfileset dir="${ext.dir}">
 	                <include name="**/**"/>
 	            </zipfileset>
 	         </zip>
