Added version string to gokb properties file with default of "development" distros built will have a version set by the build.xml

--- a/refine/extensions/gokb/module/MOD-INF/gokb.properties
+++ b/refine/extensions/gokb/module/MOD-INF/gokb.properties
@@ -18,3 +18,5 @@ proxyCommands = checkSkippedTitles, quickCreate
 regex.name = Host
 regex.pattern = ^(.*\:\/\/)?([^\/]*).*
 regex.skip = 1
+
+module.version = development
