Sorted conflicts from stashed changes

--- a/refine/extensions/gokb/module/MOD-INF/gokb.properties
+++ b/refine/extensions/gokb/module/MOD-INF/gokb.properties
@@ -1,6 +1,6 @@
 # APIs that the GOKb client can connect to.
-api.entry = Test (K-Int),test,http://gokb.k-int.com/gokb/api/
-# api.entry = Test (Kuali),kuali_test,https://test-gokb.kuali.org/gokb/api/
+# api.entry = Test (K-Int),test,http://gokb.k-int.com/gokb/api/
+api.entry = Test (Kuali),kuali_test,https://test-gokb.kuali.org/gokb/api/
 # api.entry = Live (Kuali),kuali_live,https://gokb.kuali.org/gokb/api/
 
 # Timeout in milliseconds
