--- a/refine/.classpath
+++ b/refine/.classpath
@@ -2,9 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="main/src"/>
 	<classpathentry kind="src" path="server/src"/>
-	<classpathentry kind="src" path="extensions/gdata/src"/>
 	<classpathentry kind="src" path="extensions/pc-axis/src"/>
-	<classpathentry kind="src" path="main/tests/server/src"/>
 	<classpathentry kind="src" output="extensions/gokb/module/MOD-INF/classes" path="extensions/gokb/src"/>
 	<classpathentry kind="src" path="main/tests/client/src"/>
 	<classpathentry kind="src" path="extensions/gokb/module/scripts"/>
@@ -16,49 +14,57 @@
 	<classpathentry exported="true" kind="lib" path="server/lib/servlet-api-2.5.jar" sourcepath="server/lib-src/servlet-api-2.5-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="server/lib/slf4j-api-1.5.6.jar"/>
 	<classpathentry exported="true" kind="lib" path="server/lib/slf4j-log4j12-1.5.6.jar"/>
-	<classpathentry kind="lib" path="webapp/WEB-INF/lib/ant-tools-1.8.0.jar"/>
-	<classpathentry kind="lib" path="webapp/WEB-INF/lib/arithcode-1.1.jar"/>
-	<classpathentry kind="lib" path="webapp/WEB-INF/lib/butterfly-1.0.1.jar"/>
-	<classpathentry kind="lib" path="webapp/WEB-INF/lib/clojure-1.5.1-slim.jar"/>
-	<classpathentry kind="lib" path="webapp/WEB-INF/lib/commons-codec-1.6.jar"/>
-	<classpathentry kind="lib" path="webapp/WEB-INF/lib/commons-collections-3.2.1.jar"/>
-	<classpathentry kind="lib" path="webapp/WEB-INF/lib/commons-fileupload-1.2.1.jar"/>
-	<classpathentry kind="lib" path="webapp/WEB-INF/lib/commons-io-1.4.jar"/>
-	<classpathentry kind="lib" path="webapp/WEB-INF/lib/commons-lang-2.5.jar"/>
-	<classpathentry kind="lib" path="webapp/WEB-INF/lib/commons-logging-1.1.1.jar"/>
-	<classpathentry kind="lib" path="webapp/WEB-INF/lib/dom4j-1.6.1.jar"/>
-	<classpathentry kind="lib" path="webapp/WEB-INF/lib/fluent-hc-4.2.5.jar"/>
-	<classpathentry kind="lib" path="webapp/WEB-INF/lib/guava-13.0.jar"/>
-	<classpathentry kind="lib" path="webapp/WEB-INF/lib/httpclient-4.2.5.jar"/>
-	<classpathentry kind="lib" path="webapp/WEB-INF/lib/httpcore-4.2.4.jar"/>
-	<classpathentry kind="lib" path="webapp/WEB-INF/lib/httpmime-4.2.5.jar"/>
-	<classpathentry kind="lib" path="webapp/WEB-INF/lib/jackson-core-asl-1.9.12.jar"/>
-	<classpathentry kind="lib" path="webapp/WEB-INF/lib/jcl-over-slf4j-1.5.6.jar"/>
-	<classpathentry kind="lib" path="webapp/WEB-INF/lib/jrdf-0.5.6.jar"/>
-	<classpathentry kind="lib" path="webapp/WEB-INF/lib/json-20100208.jar"/>
-	<classpathentry kind="lib" path="webapp/WEB-INF/lib/jsoup-1.4.1.jar"/>
-	<classpathentry kind="lib" path="webapp/WEB-INF/lib/lessen-trunk-r8.jar"/>
-	<classpathentry kind="lib" path="webapp/WEB-INF/lib/log4j-1.2.15.jar"/>
-	<classpathentry kind="lib" path="webapp/WEB-INF/lib/marc4j-2.4.jar"/>
-	<classpathentry kind="lib" path="webapp/WEB-INF/lib/odfdom-java-0.8.7.jar"/>
-	<classpathentry kind="lib" path="webapp/WEB-INF/lib/opencsv-2.4-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="webapp/WEB-INF/lib/openrefine-2.6-beta.1.jar"/>
-	<classpathentry kind="lib" path="webapp/WEB-INF/lib/poi-3.8-20120326.jar"/>
-	<classpathentry kind="lib" path="webapp/WEB-INF/lib/poi-ooxml-3.8-20120326.jar"/>
-	<classpathentry kind="lib" path="webapp/WEB-INF/lib/poi-ooxml-schemas-3.8-20120326.jar"/>
-	<classpathentry kind="lib" path="webapp/WEB-INF/lib/resolver.jar"/>
-	<classpathentry kind="lib" path="webapp/WEB-INF/lib/rhino-1.7R2.jar"/>
-	<classpathentry kind="lib" path="webapp/WEB-INF/lib/secondstring-20100303.jar"/>
-	<classpathentry kind="lib" path="webapp/WEB-INF/lib/serializer.jar"/>
-	<classpathentry kind="lib" path="webapp/WEB-INF/lib/signpost-commonshttp4-1.2.1.2.jar"/>
-	<classpathentry kind="lib" path="webapp/WEB-INF/lib/signpost-core-1.2.1.2.jar"/>
-	<classpathentry kind="lib" path="webapp/WEB-INF/lib/slf4j-api-1.5.6.jar"/>
-	<classpathentry kind="lib" path="webapp/WEB-INF/lib/slf4j-log4j12-1.5.6.jar"/>
-	<classpathentry kind="lib" path="webapp/WEB-INF/lib/velocity-1.5.jar"/>
-	<classpathentry kind="lib" path="webapp/WEB-INF/lib/vicino-1.1.jar"/>
-	<classpathentry kind="lib" path="webapp/WEB-INF/lib/xercesImpl-2.11.jar"/>
-	<classpathentry kind="lib" path="webapp/WEB-INF/lib/xml-apis.jar"/>
-	<classpathentry kind="lib" path="webapp/WEB-INF/lib/xmlbeans-2.3.0.jar"/>
 	<classpathentry kind="lib" path="extensions/gokb/module/MOD-INF/lib/gson-2.2.4.jar"/>
+	<classpathentry kind="lib" path="extensions/freebase/module/MOD-INF/lib/commons-logging-1.1.1.jar"/>
+	<classpathentry kind="lib" path="extensions/freebase/module/MOD-INF/lib/google-api-client-1.13.2-beta.jar"/>
+	<classpathentry kind="lib" path="extensions/freebase/module/MOD-INF/lib/google-api-services-freebase-v1-rev25-1.13.2-beta.jar"/>
+	<classpathentry kind="lib" path="extensions/freebase/module/MOD-INF/lib/google-http-client-1.13.1-beta.jar"/>
+	<classpathentry kind="lib" path="extensions/freebase/module/MOD-INF/lib/google-http-client-jackson-1.13.1-beta.jar"/>
+	<classpathentry kind="lib" path="extensions/freebase/module/MOD-INF/lib/google-oauth-client-servlet-1.13.1-beta.jar"/>
+	<classpathentry kind="lib" path="extensions/freebase/module/MOD-INF/lib/mail.jar"/>
+	<classpathentry kind="lib" path="extensions/jython/module/MOD-INF/lib/jython-standalone-2.5.3.jar"/>
+	<classpathentry kind="lib" path="main/webapp/WEB-INF/lib/ant-tools-1.8.0.jar"/>
+	<classpathentry kind="lib" path="main/webapp/WEB-INF/lib/arithcode-1.1.jar"/>
+	<classpathentry kind="lib" path="main/webapp/WEB-INF/lib/butterfly-1.0.1.jar"/>
+	<classpathentry kind="lib" path="main/webapp/WEB-INF/lib/clojure-1.5.1-slim.jar"/>
+	<classpathentry kind="lib" path="main/webapp/WEB-INF/lib/commons-codec-1.6.jar"/>
+	<classpathentry kind="lib" path="main/webapp/WEB-INF/lib/commons-collections-3.2.1.jar"/>
+	<classpathentry kind="lib" path="main/webapp/WEB-INF/lib/commons-fileupload-1.2.1.jar"/>
+	<classpathentry kind="lib" path="main/webapp/WEB-INF/lib/commons-io-1.4.jar"/>
+	<classpathentry kind="lib" path="main/webapp/WEB-INF/lib/commons-lang-2.5.jar"/>
+	<classpathentry kind="lib" path="main/webapp/WEB-INF/lib/commons-logging-1.1.1.jar"/>
+	<classpathentry kind="lib" path="main/webapp/WEB-INF/lib/dom4j-1.6.1.jar"/>
+	<classpathentry kind="lib" path="main/webapp/WEB-INF/lib/fluent-hc-4.2.5.jar"/>
+	<classpathentry kind="lib" path="main/webapp/WEB-INF/lib/guava-13.0.jar"/>
+	<classpathentry kind="lib" path="main/webapp/WEB-INF/lib/httpclient-4.2.5.jar"/>
+	<classpathentry kind="lib" path="main/webapp/WEB-INF/lib/httpcore-4.2.4.jar"/>
+	<classpathentry kind="lib" path="main/webapp/WEB-INF/lib/httpmime-4.2.5.jar"/>
+	<classpathentry kind="lib" path="main/webapp/WEB-INF/lib/icu4j-4.2.1.jar"/>
+	<classpathentry kind="lib" path="main/webapp/WEB-INF/lib/jackson-core-asl-1.9.12.jar"/>
+	<classpathentry kind="lib" path="main/webapp/WEB-INF/lib/jcl-over-slf4j-1.5.6.jar"/>
+	<classpathentry kind="lib" path="main/webapp/WEB-INF/lib/jrdf-0.5.6.jar"/>
+	<classpathentry kind="lib" path="main/webapp/WEB-INF/lib/json-20100208.jar"/>
+	<classpathentry kind="lib" path="main/webapp/WEB-INF/lib/jsoup-1.4.1.jar"/>
+	<classpathentry kind="lib" path="main/webapp/WEB-INF/lib/lessen-trunk-r8.jar"/>
+	<classpathentry kind="lib" path="main/webapp/WEB-INF/lib/log4j-1.2.15.jar"/>
+	<classpathentry kind="lib" path="main/webapp/WEB-INF/lib/marc4j-2.4.jar"/>
+	<classpathentry kind="lib" path="main/webapp/WEB-INF/lib/odfdom-java-0.8.7.jar"/>
+	<classpathentry kind="lib" path="main/webapp/WEB-INF/lib/opencsv-2.4-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="main/webapp/WEB-INF/lib/poi-3.8-20120326.jar"/>
+	<classpathentry kind="lib" path="main/webapp/WEB-INF/lib/poi-ooxml-3.8-20120326.jar"/>
+	<classpathentry kind="lib" path="main/webapp/WEB-INF/lib/poi-ooxml-schemas-3.8-20120326.jar"/>
+	<classpathentry kind="lib" path="main/webapp/WEB-INF/lib/resolver.jar"/>
+	<classpathentry kind="lib" path="main/webapp/WEB-INF/lib/rhino-1.7R2.jar"/>
+	<classpathentry kind="lib" path="main/webapp/WEB-INF/lib/secondstring-20100303.jar"/>
+	<classpathentry kind="lib" path="main/webapp/WEB-INF/lib/serializer.jar"/>
+	<classpathentry kind="lib" path="main/webapp/WEB-INF/lib/signpost-commonshttp4-1.2.1.2.jar"/>
+	<classpathentry kind="lib" path="main/webapp/WEB-INF/lib/signpost-core-1.2.1.2.jar"/>
+	<classpathentry kind="lib" path="main/webapp/WEB-INF/lib/slf4j-api-1.5.6.jar"/>
+	<classpathentry kind="lib" path="main/webapp/WEB-INF/lib/slf4j-log4j12-1.5.6.jar"/>
+	<classpathentry kind="lib" path="main/webapp/WEB-INF/lib/velocity-1.5.jar"/>
+	<classpathentry kind="lib" path="main/webapp/WEB-INF/lib/vicino-1.1.jar"/>
+	<classpathentry kind="lib" path="main/webapp/WEB-INF/lib/xercesImpl-2.11.jar"/>
+	<classpathentry kind="lib" path="main/webapp/WEB-INF/lib/xml-apis.jar"/>
+	<classpathentry kind="lib" path="main/webapp/WEB-INF/lib/xmlbeans-2.3.0.jar"/>
 	<classpathentry kind="output" path="build"/>
 </classpath>
