Got apps working together and fixed startup bug in refine.

--- a/refine/extensions/gokb/module/MOD-INF/gokb.properties
+++ b/refine/extensions/gokb/module/MOD-INF/gokb.properties
@@ -1,9 +1,9 @@
 # Version
-module.version = development
+module.version = 3.1
 
 # APIs that the GOKb client can connect to.
 api.entry =\
-	Test (K-Int),test,http://gokb.k-int.com/gokb/api/,\
+	Test (K-Int),test,https://gokb.k-int.com/gokb/api/,\
 	Test (Kuali),kuali_test,https://test-gokb.kuali.org/gokb/api/,\
 	Live (Kuali),kuali_live,https://gokb.kuali.org/gokb/api/
 
