--- a/server/gokb/application.properties
+++ b/server/gokb/application.properties
@@ -1,12 +1,12 @@
 #Grails Metadata file
-#Mon Mar 02 14:24:58 GMT 2015
-app.buildDate=Mar 02, 2015
-app.buildNumber=1520
-app.buildProfile=development
+#Mon Mar 16 15:23:18 GMT 2015
+app.buildDate=Mar 16, 2015
+app.buildNumber=1521
+app.buildProfile=production
 app.grails.version=2.3.11
 app.name=gokb
 app.servlet.version=2.5
-app.version=4.1.1-Public-Preview
+app.version=4.1.2-Public-Preview
 extension.build.branch=dev
 extension.build.date=1423412657711
 extension.build.tag=CLIENT_4.0.9
