--- a/server/gokb/application.properties
+++ b/server/gokb/application.properties
@@ -1,8 +1,8 @@
 #Grails Metadata file
-#Sat May 21 12:03:44 BST 2016
-app.buildDate=May 21, 2016
-app.buildNumber=2409
-app.buildProfile=production
+#Wed Jun 01 09:31:26 BST 2016
+app.buildDate=Jun 01, 2016
+app.buildNumber=2410
+app.buildProfile=development
 app.grails.version=2.3.11
 app.name=gokb
 app.servlet.version=2.5
