--- a/server/gokb/application.properties
+++ b/server/gokb/application.properties
@@ -1,8 +1,8 @@
 #Grails Metadata file
-#Wed Jun 01 10:01:56 BST 2016
+#Wed Jun 01 17:16:07 BST 2016
 app.buildDate=Jun 01, 2016
-app.buildNumber=2414
-app.buildProfile=development
+app.buildNumber=2415
+app.buildProfile=production
 app.grails.version=2.3.11
 app.name=gokb
 app.servlet.version=2.5
