--- a/refine/extensions/gokb/module/MOD-INF/gokb.properties
+++ b/refine/extensions/gokb/module/MOD-INF/gokb.properties
@@ -3,9 +3,8 @@ module.version = development
 
 # APIs that the GOKb client can connect to.
 api.entry =\
-        Live (Kuali),kuali_live,https://gokb.kuali.org/gokb/,\
         Live (Open Library),openlibs,https://gokb.openlibraryfoundation.org/gokb/,\
-        Test (Kuali),kuali_test,https://test-gokb.kuali.org/gokb/,\
+        Test (Open Library),openlibs_test,https://gokb-test.openlibraryfoundation.org/gokb/,\
         Test (K-Int),test,https://gokb.k-int.com/gokb/
 
 # Timeout in milliseconds
