--- a/server/gokb/application.properties
+++ b/server/gokb/application.properties
@@ -1,7 +1,7 @@
 #Grails Metadata file
-#Mon May 08 15:59:50 CEST 2017
-app.buildDate=May 08, 2017
-app.buildNumber=3347
+#Thu Jun 15 13:51:33 BST 2017
+app.buildDate=Jun 15, 2017
+app.buildNumber=3349
 app.buildProfile=development
 app.grails.version=2.5.6
 app.name=gokb
