--- a/server/gokb/application.properties
+++ b/server/gokb/application.properties
@@ -1,8 +1,8 @@
 #Grails Metadata file
-#Fri Jun 16 10:19:36 BST 2017
-app.buildDate=Jun 16, 2017
-app.buildNumber=3378
-app.buildProfile=development
+#Mon Jun 19 12:36:51 BST 2017
+app.buildDate=Jun 19, 2017
+app.buildNumber=3379
+app.buildProfile=production
 app.grails.version=2.5.6
 app.name=gokb
 app.servlet.version=3.0
