--- a/server/gokb/application.properties
+++ b/server/gokb/application.properties
@@ -1,8 +1,8 @@
 #Grails Metadata file
-#Mon Jun 19 12:46:33 BST 2017
+#Mon Jun 19 15:09:49 BST 2017
 app.buildDate=Jun 19, 2017
-app.buildNumber=3381
-app.buildProfile=production
+app.buildNumber=3385
+app.buildProfile=development
 app.grails.version=2.5.6
 app.name=gokb
 app.servlet.version=3.0
