--- a/server/gokb/application.properties
+++ b/server/gokb/application.properties
@@ -1,9 +1,9 @@
 #Grails Metadata file
-#Mon Jun 19 15:28:09 BST 2017
+#Mon Jun 19 16:35:19 BST 2017
 app.buildDate=Jun 19, 2017
-app.buildNumber=3389
-app.buildProfile=production
+app.buildNumber=3390
+app.buildProfile=development
 app.grails.version=2.5.6
 app.name=gokb
 app.servlet.version=3.0
-app.version=7.0.36
+app.version=7.0.37
