--- a/server/gokb/application.properties
+++ b/server/gokb/application.properties
@@ -1,7 +1,7 @@
 #Grails Metadata file
-#Mon Apr 03 12:19:38 CEST 2017
-app.buildDate=Apr 03, 2017
-app.buildNumber=3306
+#Tue Jan 23 13:11:20 GMT 2018
+app.buildDate=Jan 23, 2018
+app.buildNumber=3307
 app.buildProfile=development
 app.grails.version=2.5.5
 app.name=gokb
